{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 48,
  "lineage": "5c1ced8f-3d84-40dd-2bb5-930d81f7ed6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2c6dc78cd9f1750",
            "association_id": "eipassoc-0f6fd0badc28bca60",
            "domain": "vpc",
            "id": "eipalloc-0b2c6dc78cd9f1750",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08a217a171166e024",
            "private_dns": "ip-10-5-3-77.ec2.internal",
            "private_ip": "10.5.3.77",
            "public_dns": "ec2-44-218-133-140.compute-1.amazonaws.com",
            "public_ip": "44.218.133.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e46074ae430fba6",
            "arn": "arn:aws:ec2:us-east-1:274712346892:instance/i-080f1c76434daab2b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080f1c76434daab2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9c74a10231242b0",
            "private_dns": "ip-10-5-2-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.2.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0829ad7765add945c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e765d66aaf29a4c7",
            "tags": {
              "Name": "applicationHost-instance-tf"
            },
            "tags_all": {
              "Name": "applicationHost-instance-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d91240aeb5aac934"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_aws_key",
            "aws_security_group.ssh_port3000_sg",
            "aws_subnet.private_subnet_az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e46074ae430fba6",
            "arn": "arn:aws:ec2:us-east-1:274712346892:instance/i-0e68a7a71a7d5f67e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e68a7a71a7d5f67e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d687454114b8cc87",
            "private_dns": "ip-10-5-3-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.3.178",
            "public_ip": "44.202.184.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-084e8e3024ccf397f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fd0272f7dafa536",
            "tags": {
              "Name": "bastionHost-instance-tf"
            },
            "tags_all": {
              "Name": "bastionHost-instance-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040ad9b027b1bb3e5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.my_aws_key",
            "aws_security_group.ssh_sg",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:internet-gateway/igw-0f6c23852989679ed",
            "id": "igw-0f6c23852989679ed",
            "owner_id": "274712346892",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2c6dc78cd9f1750",
            "association_id": "eipassoc-0f6fd0badc28bca60",
            "connectivity_type": "public",
            "id": "nat-0f10eeb3ce94ca890",
            "network_interface_id": "eni-08a217a171166e024",
            "private_ip": "10.5.3.77",
            "public_ip": "44.218.133.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fd0272f7dafa536",
            "tags": {
              "Name": "nat-tf"
            },
            "tags_all": {
              "Name": "nat-tf"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:route-table/rtb-034279a9dc2d5c1e7",
            "id": "rtb-034279a9dc2d5c1e7",
            "owner_id": "274712346892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f10eeb3ce94ca890",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-tf"
            },
            "tags_all": {
              "Name": "private-route-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:route-table/rtb-07cc9f79878d990ee",
            "id": "rtb-07cc9f79878d990ee",
            "owner_id": "274712346892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6c23852989679ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-tf"
            },
            "tags_all": {
              "Name": "public-route-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8d853b81a2f3d3",
            "route_table_id": "rtb-034279a9dc2d5c1e7",
            "subnet_id": "subnet-0ac9cc6ee9b2f88d5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.myrtb_private",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051af6b0ba5f3ef98",
            "route_table_id": "rtb-034279a9dc2d5c1e7",
            "subnet_id": "subnet-0e765d66aaf29a4c7"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.myrtb_private",
            "aws_subnet.private_subnet_az2",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c33d34c748ff1b7",
            "route_table_id": "rtb-07cc9f79878d990ee",
            "subnet_id": "subnet-08fd0272f7dafa536"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.myrtb_public",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c6fd526c1534cb3",
            "route_table_id": "rtb-07cc9f79878d990ee",
            "subnet_id": "subnet-0260f77c8c34adb9b"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.myrtb_public",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_port3000_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:security-group/sg-0d91240aeb5aac934",
            "description": "Allow SSH and Port 3000 traffic from VPC CIDR only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d91240aeb5aac934",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow-ssh-and-port3000",
            "name_prefix": "",
            "owner_id": "274712346892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port3000-sg-tf"
            },
            "tags_all": {
              "Name": "ssh-port3000-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:security-group/sg-040ad9b027b1bb3e5",
            "description": "Allow ssh access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040ad9b027b1bb3e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "274712346892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg-tf"
            },
            "tags_all": {
              "Name": "ssh-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:subnet/subnet-0ac9cc6ee9b2f88d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac9cc6ee9b2f88d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274712346892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_az1-tf"
            },
            "tags_all": {
              "Name": "private_subnet_az1-tf"
            },
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:subnet/subnet-0e765d66aaf29a4c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e765d66aaf29a4c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274712346892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_az2-tf"
            },
            "tags_all": {
              "Name": "private_subnet_az2-tf"
            },
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:subnet/subnet-08fd0272f7dafa536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd0272f7dafa536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274712346892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1-tf"
            },
            "tags_all": {
              "Name": "public_subnet_az1-tf"
            },
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:subnet/subnet-0260f77c8c34adb9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0260f77c8c34adb9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274712346892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2-tf"
            },
            "tags_all": {
              "Name": "public_subnet_az2-tf"
            },
            "vpc_id": "vpc-0b1a17dfe14335ca3"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274712346892:vpc/vpc-0b1a17dfe14335ca3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-03d71c7d81ba5e6ba",
            "default_route_table_id": "rtb-0dc537af2f6d143c9",
            "default_security_group_id": "sg-0fe6a28b09b5d664d",
            "dhcp_options_id": "dopt-0a798cc77e0dc19bd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1a17dfe14335ca3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc537af2f6d143c9",
            "owner_id": "274712346892",
            "tags": {
              "Name": "vpc-tf"
            },
            "tags_all": {
              "Name": "vpc-tf"
            }
          }
        }
      ]
    }
  ]
}